Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129724

error C2065: 'CommandStateChangeConstants': undeclared identifier

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.9.0 FF, 6.9.0 Beta1
    • 6.9.0 FF
    • Active Qt
    • None
    • 2c4d77d84 (dev), 3cdbee029 (dev), 6b727bc82 (dev)

      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(245): error C2065: 'CommandStateChangeConstants': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(245): error C2923: 'QtMocHelpers::EnumData': 'CommandStateChangeConstants' is not a valid template type argument for parameter 'Enum'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(245): note: see declaration of 'CommandStateChangeConstants'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(245): error C2976: 'QtMocHelpers::EnumData': too few template arguments
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(245): error C2641: cannot deduce template arguments for 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(245): error C2783: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(uint,uint,uint)': could not deduce template argument for 'Enum'
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(223): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(245): error C2780: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(QtMocHelpers::EnumData<Enum,N>)': expects 1 arguments - 3 provided
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(246): error C2653: 'CommandStateChangeConstants': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(246): error C2065: 'CSC_UPDATECOMMANDS': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(247): error C2653: 'CommandStateChangeConstants': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(247): error C2065: 'CSC_NAVIGATEFORWARD': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(248): error C2653: 'CommandStateChangeConstants': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(248): error C2065: 'CSC_NAVIGATEBACK': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(251): error C2065: 'NewProcessCauseConstants': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(251): error C2923: 'QtMocHelpers::EnumData': 'NewProcessCauseConstants' is not a valid template type argument for parameter 'Enum'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(251): note: see declaration of 'NewProcessCauseConstants'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(251): error C2976: 'QtMocHelpers::EnumData': too few template arguments
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(251): error C2641: cannot deduce template arguments for 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(251): error C2783: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(uint,uint,uint)': could not deduce template argument for 'Enum'
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(223): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(251): error C2780: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(QtMocHelpers::EnumData<Enum,N>)': expects 1 arguments - 3 provided
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(252): error C2653: 'NewProcessCauseConstants': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(252): error C2065: 'ProtectedModeRedirect': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(255): error C2065: 'OLECMDEXECOPT': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(255): error C2923: 'QtMocHelpers::EnumData': 'OLECMDEXECOPT' is not a valid template type argument for parameter 'Enum'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(255): note: see declaration of 'OLECMDEXECOPT'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(255): error C2976: 'QtMocHelpers::EnumData': too few template arguments
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(255): error C2641: cannot deduce template arguments for 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(255): error C2783: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(uint,uint,uint)': could not deduce template argument for 'Enum'
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(223): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(255): error C2780: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(QtMocHelpers::EnumData<Enum,N>)': expects 1 arguments - 3 provided
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(256): error C2653: 'OLECMDEXECOPT': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(256): error C2065: 'OLECMDEXECOPT_DODEFAULT': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(257): error C2653: 'OLECMDEXECOPT': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(257): error C2065: 'OLECMDEXECOPT_PROMPTUSER': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(258): error C2653: 'OLECMDEXECOPT': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(258): error C2065: 'OLECMDEXECOPT_DONTPROMPTUSER': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(259): error C2653: 'OLECMDEXECOPT': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(259): error C2065: 'OLECMDEXECOPT_SHOWHELP': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(262): error C2065: 'OLECMDF': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(262): error C2923: 'QtMocHelpers::EnumData': 'OLECMDF' is not a valid template type argument for parameter 'Enum'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(262): note: see declaration of 'OLECMDF'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(262): error C2976: 'QtMocHelpers::EnumData': too few template arguments
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(262): error C2641: cannot deduce template arguments for 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(262): error C2783: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(uint,uint,uint)': could not deduce template argument for 'Enum'
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(223): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(262): error C2780: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(QtMocHelpers::EnumData<Enum,N>)': expects 1 arguments - 3 provided
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(263): error C2653: 'OLECMDF': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(263): error C2065: 'OLECMDF_SUPPORTED': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(264): error C2653: 'OLECMDF': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(264): error C2065: 'OLECMDF_ENABLED': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(265): error C2653: 'OLECMDF': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(265): error C2065: 'OLECMDF_LATCHED': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(266): error C2653: 'OLECMDF': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(266): error C2065: 'OLECMDF_NINCHED': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(267): error C2653: 'OLECMDF': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(267): error C2065: 'OLECMDF_INVISIBLE': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(268): error C2653: 'OLECMDF': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(268): error C2065: 'OLECMDF_DEFHIDEONCTXTMENU': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(271): error C2065: 'OLECMDID': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(271): error C2923: 'QtMocHelpers::EnumData': 'OLECMDID' is not a valid template type argument for parameter 'Enum'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(271): note: see declaration of 'OLECMDID'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(271): error C2976: 'QtMocHelpers::EnumData': too few template arguments
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(271): error C2641: cannot deduce template arguments for 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(271): error C2783: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(uint,uint,uint)': could not deduce template argument for 'Enum'
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(223): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(271): error C2780: 'QtMocHelpers::EnumData<Enum,N> QtMocHelpers::EnumData(QtMocHelpers::EnumData<Enum,N>)': expects 1 arguments - 3 provided
      C:\Users\qt\work\install\include\QtCore/qtmochelpers.h(210): note: see declaration of 'QtMocHelpers::EnumData'
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(272): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(272): error C2065: 'OLECMDID_OPEN': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(273): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(273): error C2065: 'OLECMDID_NEW': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(274): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(274): error C2065: 'OLECMDID_SAVE': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(275): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(275): error C2065: 'OLECMDID_SAVEAS': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(276): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(276): error C2065: 'OLECMDID_SAVECOPYAS': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(277): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(277): error C2065: 'OLECMDID_PRINT': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(278): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(278): error C2065: 'OLECMDID_PRINTPREVIEW': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(279): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(279): error C2065: 'OLECMDID_PAGESETUP': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(280): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(280): error C2065: 'OLECMDID_SPELL': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(281): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(281): error C2065: 'OLECMDID_PROPERTIES': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(282): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(282): error C2065: 'OLECMDID_CUT': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(283): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(283): error C2065: 'OLECMDID_COPY': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(284): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(284): error C2065: 'OLECMDID_PASTE': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(285): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(285): error C2065: 'OLECMDID_PASTESPECIAL': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(286): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(286): error C2065: 'OLECMDID_UNDO': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(287): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(287): error C2065: 'OLECMDID_REDO': undeclared identifier
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(288): error C2653: 'OLECMDID': is not a class or namespace name
      C:\Users\qt\work\qt\qtactiveqt_standalone_tests\tests\auto\dumpcpp\ieframe.cpp(288): fatal error C1003: error count exceeds 100; stopping compilation
      

      Build log: https://testresults.qt.io/logs/qt/qtactiveqt/a52e5198abcebe75ef3230a06d4b9c2752d4de6c/WindowsWindows_11_23H2x86_64WindowsWindows_11_23H2x86_64MSVC2022qtci-windows-11_23H2-x86_64-53-038d2bDebugAndRelease_Sccache_UseConfigure_WarningsAreErrors/88a52b1af13b27288d464c010598d23ea76826d0/build_1728038527/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtactiveqt/tasks/1728038506

      Tested changes (refs/builds/qtci/dev/1728038505):
      https://codereview.qt-project.org/c/qt/qtactiveqt/+/595628/2 Update dependencies on 'dev' in qt/qtactiveqt

        1. header_for_moc.h
          7 kB
          Oliver Wolff
        For Gerrit Dashboard: QTBUG-129724
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes