dumpcpp: clean up the cleaning up of moc output

moc does not generate either the "QtPrivate::TypeAndForceComplete<" or
the "uint(" code any more since qtbase commit
da4a6cf78ff42a4f69c2775997ff174ef647f3f3. This will match nothing, so
it's dead code. It also doesn't appear to be necessary any more, as
everything compiles.

There's no explanation of why this was needed in commit
b4d965231e4aa22b625997e8d4271f3c6f872696.

Instead of cleaning up what moc is producing, we instead ask it to
produce ActiveQt-compliant code with the hidden --active-qt option.

This allows us to use the Q_OBJECT or Q_OBJECT_FAKE macros for full &
proper meta object, so the moc output matches the declarations. It was
missing the new qt_create_metaobjectdata() private template function
that moc is implementing. And if you don't declare it, then the moc
function won't work.

The function declaration works with both GCC and MSVC due to apparent
bugs (see https://conformance.godbolt.org/z/TEornTf5o).

Fixes: QTBUG-129724
Change-Id: I24a3e1cdcc2258791b13fffda65f2c8de0c450b9
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>